[gd_scene load_steps=4 format=2]

[ext_resource path="res://ui/carousel/carousel.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/ui/arrow-left.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/ui/arrow-right.png" type="Texture" id=3]

[node name="carousel" type="HBoxContainer"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
script = ExtResource( 1 )

[node name="arrowLeft" type="TextureButton" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 226.0
margin_right = 290.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 2 )
stretch_mode = 4
_sections_unfolded = [ "Textures" ]

[node name="optionLabel" type="Label" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 294.0
margin_top = 25.0
margin_right = 346.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Option"
align = 1
valign = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="arrowRight" type="TextureButton" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 350.0
margin_right = 414.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
stretch_mode = 4
_sections_unfolded = [ "Textures" ]

[connection signal="pressed" from="arrowLeft" to="." method="_on_arrowLeft_pressed"]

[connection signal="pressed" from="arrowRight" to="." method="_on_arrowRight_pressed"]


